--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="col-sm-12 ">
                       <div class="about-content">
                         <h2 class="mb-0">About Me.</h2>
-                        <span class="title-style">UI / UX DESIGNER & WEB DEVELOPER</span>
+                        <span class="title-style">DEVELOPER</span>
                         <p>I am <span class="title">Jerry Daniels</span> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever It has survived not only five centuries, but also the leap into electronic but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing</p>
                       </div>
                     </div>
